# Vertanom-final

./: CMakeLists.txt  CMakeLists.txt.user.5aa6d3f  README.md  aboutpage.cpp  aboutpage.h  aboutpage.ui  aboutus.cpp  aboutus.h  aboutus.ui  detabase.cpp  detabase.h  detabase.ui  login.cpp  login.db.db  login.h  login.ui  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  plswork.db  resource.qrc  sensorcondition.cpp  sensorcondition.h  sensorcondition.ui  signup.db  userprofile.cpp  userprofile.h  userprofile.ui  vertanom
